# fwh_peloton

./: .gitignore  README.md  pyproject.toml
agent-spec/: tools-pattern.agent-spec.yaml
src/peloton/: __init__.py
src/peloton/ffl/: peloton.ffl
src/peloton/handlers/: __init__.py
src/peloton/handlers/ingest/: ingest_handlers.py
src/peloton/handlers/portraits/: portraits_handlers.py
src/peloton/handlers/shared/: peloton_utils.py
src/peloton/tools/: README.md  batch-photos.sh  batch_photos.py  convert-photos.sh  convert_photos.py  copy-tree.sh  copy_tree.py  crop-riders.sh  crop_riders.py  cull-blurry.sh  cull_blurry.py  detect-riders.sh  detect_riders.py  enhance-image.sh  enhance_image.py  group-riders.sh  group_riders.py  nef-to-tif.sh  nef_to_tif.py  process-photo.sh  process_photo.py  tiffs-to-jpegs.sh  tiffs_to_jpegs.py
src/peloton/tools/_peloton_tools/: __init__.py  copytree.py  crop.py  detect.py  enhance.py  images.py  peloton_mocks.py  pipeline.py  quality.py  recognize.py  segment.py  sidecar.py  storage.py
tests/: conftest.py  test_cli_smoke.py  test_copytree.py  test_crop.py  test_enhance_brighten.py  test_enhance_tiling.py  test_ffl_domain.py  test_nef_to_tif.py  test_pipeline_mock.py  test_quality.py  test_recognize.py  test_tiffs_to_jpegs.py
