[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fwh-peloton"
version = "0.1.0"
description = "Split group cycling photos into per-rider enhanced portraits: detect riders → crop → upscale → face-restore."
requires-python = ">=3.11"
# Core deps are light — the pipeline runs (degraded) with just Pillow/numpy.
# The heavy ML backends are optional extras, imported lazily (see below).
dependencies = [
    "pillow>=10.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
# Rider detection (person + bicycle boxes). Ultralytics pulls torch.
detect = ["ultralytics>=8.1"]
# Upscaling + face restoration. These stacks are finicky; the pipeline falls
# back to a PIL Lanczos upscale + passthrough when they are absent.
enhance = ["realesrgan>=0.3", "gfpgan>=1.3"]
s3 = ["boto3>=1.28"]
test = ["pytest>=7.4"]

# NOTE: the facetwork.domains entry point + handlers/ + ffl/ are the next phase
# (turning these tools into a workflow). Left out until the handlers land so the
# package installs as a plain, standalone tools library for now.

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
peloton = ["ffl/*.ffl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
