[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fwh-peloton"
version = "0.1.0"
description = "Split group cycling photos into per-rider enhanced portraits: detect riders → crop → upscale → face-restore."
requires-python = ">=3.11"
# Core deps are light — the pipeline runs (degraded) with just Pillow/numpy.
# The heavy ML backends are optional extras, imported lazily (see below).
dependencies = [
    "pillow>=10.0",
    "numpy>=1.24",
    "pillow-heif>=0.13",  # decode iPhone .heic/.heif photos
]

[project.optional-dependencies]
# Rider detection (person + bicycle boxes). Ultralytics pulls torch.
detect = ["ultralytics>=8.1"]
# Upscaling + face restoration. spandrel runs Real-ESRGAN .pth weights with
# plain torch (no basicsr); gfpgan restores faces (a functional_tensor shim in
# enhance.py bridges modern torchvision). Weights auto-download to
# ~/.cache/peloton/weights (RealESRGAN_x4plus.pth, GFPGANv1.4.pth). The pipeline
# falls back to Lanczos upscale + passthrough when these are absent.
enhance = ["spandrel>=0.3", "spandrel_extra_arches>=0.2", "gfpgan>=1.3"]  # extra_arches = CodeFormer (non-commercial license)
# Same-rider grouping: face embeddings (ArcFace) + clustering.
recognize = ["insightface>=0.7", "onnxruntime>=1.16"]
raw = ["rawpy>=0.19"]  # decode camera RAW (.nef/.cr2/.arw/.dng/…)
s3 = ["boto3>=1.28"]
test = ["pytest>=7.4"]

# NOTE: the facetwork.domains entry point + handlers/ + ffl/ are the next phase
# (turning these tools into a workflow). Left out until the handlers land so the
# package installs as a plain, standalone tools library for now.

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
peloton = ["ffl/*.ffl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
